--- a/Views/Home/LoginAdmin.cshtml
+++ b/Views/Home/LoginAdmin.cshtml
@@ -44,9 +44,14 @@
                     </form>
 
                     <hr />
+                    <p class="text-center"></p>
+                    ¿No tienes cuenta?
+                    <a href="@Url.Action("CreateAdmin", "Admin")">Regístrate aquí</a>
+                    </p>
                     <p class="text-center text-muted">Solo para uso administrativo</p>
                     <p class="text-center">
-                        <a href="@Url.Action("Login", "Home")" class="text-decoration-underline">Volver al inicio de sesión de clientes</a>
+                        <a href="@Url.Action("Login", "Home")" class="text-decoration-underline">Volver al inicio de
+                            sesión</a>
                     </p>
                 </div>
             </div>
