--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -38,4 +38,9 @@
     </div>
 
     <button type="submit" class="btn btn-primary mt-2">Registrarse</button>
+
+<br>
+
+<p>¿Ya tienes cuenta? <a href="@Url.Action("Usuario", "Home")">Iniciar sesión</a></p>
+
 </form>
