--- a/Views/Home/LoginAdmin.cshtml
+++ b/Views/Home/LoginAdmin.cshtml
@@ -46,7 +46,7 @@
                     <hr />
                     <p class="text-center"></p>
                     ¿No tienes cuenta?
-                    <a href="@Url.Action("CreateAdmin", "Admin")">Regístrate aquí</a>
+                    <a href="@Url.Action("CreateAdmin", "Usuarios")">Regístrate aquí</a>
                     </p>
                     <p class="text-center text-muted">Solo para uso administrativo</p>
                     <p class="text-center">
