Pagina de creacion de Usuario-Admin Funcional

--- a/Views/Home/LoginAdmin.cshtml
+++ b/Views/Home/LoginAdmin.cshtml
@@ -45,8 +45,16 @@
 
                     <hr />
                     <p class="text-center text-muted">Solo para uso administrativo</p>
+
                     <p class="text-center">
-                        <a href="@Url.Action("Login", "Home")" class="text-decoration-underline">Volver al inicio de sesión de clientes</a>
+                        ¿No tienes cuenta?
+                        <a href="@Url.Action("Create", "Usuario")">Regístrate aquí</a>
+                    </p>
+
+
+                    <p class="text-center">
+                        <a href="@Url.Action("Login", "Home")" class="text-decoration-underline">Volver al inicio de
+                            sesión de clientes</a>
                     </p>
                 </div>
             </div>
